    <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Muscle</string>
    <string name="leftfirstbutton"> 患者信息  </string>
    <string name="myoelectricityevaluation"> 肌电评估 </string>
    <string name="myoelectricityfeedback">肌电反馈</string>
    <string name="scheme">方案选取</string>
    <string name="stimulate">刺激治疗</string>
    <string name="parameter">参数设定</string>
    <string name="patientQuery">患者查询</string>
    <string name="bt_not_enabled_leaving">未打开蓝牙设备,再见</string>

    <!--  DeviceListActivity -->
    <string name="scanning">扫描附近的蓝牙设备...</string>
    <string name="select_device">选择设备来建立连接</string>
    <string name="none_paired">没有已配对的设备</string>
    <string name="none_found">没有扫描到蓝牙设备</string>
    <string name="title_paired_devices">已配对设备</string>
    <string name="title_other_devices">附近的设备</string>
    <string name="button_scan">扫描蓝牙设备</string>


    <string name="send">Send</string>
    <string name="not_connected">未连接</string>

    <string name="title_connecting">正在连接</string>
    <string name="title_connected_to">连接到 <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">未连接</string>

    <string name="button_return">返回</string>



        <!-- Options Menu -->
        <string name="menu_bluetooth">打开蓝牙</string>
        <string name="menu_wireless">网络连接</string>
        <string name="menu_scan">扫描蓝牙设备</string>
        <string name="menu_discoverable">可见性</string>
        <string name="menu_exit">退出</string>
        <string name="menu_advances">高级设置</string>
        <string name="menu_help">帮助</string>


    </resources>